# TravelSurvey

./: .gitignore  AboutPage.qml  BookingPage.qml  CMakeLists.txt  HomePage.qml  LocationsPage.qml  ManualBookingPage.qml  README.md  ResultPage.qml  SurveyPage.qml  TripsPage.qml  main.cpp  main.qml  qml.qrc  surveymodel.cpp  surveymodel.h  tst_surveymodel.cpp
.github/workflows/: ci-cd.yml
